[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/escudosbg.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/ea.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/eEraDua.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scrpts/Partida.gd" type="Script" id=4]
[ext_resource path="res://Sonido/HitSound.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 5
outline_color = Color( 0.454902, 0, 0.360784, 1 )
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.0
margin_top = -240.0
margin_right = 432.0
margin_bottom = 240.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -328.0
margin_right = 328.0
custom_constants/separation = 80

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 656.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.878431, 0.654902, 0.0627451, 1 )
custom_fonts/font = ExtResource( 2 )
text = "PARTIDA"
align = 1

[node name="btnCrearNuevaPartida" type="Button" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 656.0
margin_bottom = 162.0
custom_colors/font_color = Color( 0.537255, 0.901961, 0.52549, 1 )
custom_fonts/font = ExtResource( 2 )
text = "CREAR NUEVA PARTIDA"
flat = true

[node name="btnCargarPartida" type="Button" parent="VBoxContainer"]
margin_top = 242.0
margin_right = 656.0
margin_bottom = 286.0
custom_colors/font_color = Color( 0.537255, 0.901961, 0.52549, 1 )
custom_fonts/font = ExtResource( 2 )
text = "CARGAR PARTIDA"
flat = true

[node name="btnSalir" type="Button" parent="VBoxContainer"]
margin_top = 366.0
margin_right = 656.0
margin_bottom = 432.0
custom_colors/font_color = Color( 0.537255, 0.901961, 0.52549, 1 )
custom_fonts/font = SubResource( 1 )
text = "SALIR"
flat = true

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="HitSound" parent="." instance=ExtResource( 5 )]

[connection signal="mouse_entered" from="VBoxContainer/btnCrearNuevaPartida" to="." method="_on_btnCrearNuevaPartida_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/btnCrearNuevaPartida" to="." method="_on_btnCrearNuevaPartida_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/btnCargarPartida" to="." method="_on_btnCargarPartida_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/btnCargarPartida" to="." method="_on_btnCargarPartida_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/btnSalir" to="." method="_on_btnSalir_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/btnSalir" to="." method="_on_btnSalir_pressed"]
